# wash

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  package.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
agents/: code.md  explore.md
crates/wash/: Cargo.toml
crates/wash/src/: fuzzy.rs  git.rs  language.rs  lib.rs  main.rs  meta.rs  profile.rs  savings.rs  search.rs  state.rs  tokens.rs  walk.rs
crates/wash/src/accounting/: categorize.rs  mod.rs  pricing.rs
crates/wash/src/ast/: line_regex.rs  mod.rs  tree_sitter_sig.rs
crates/wash/src/bench/: compare.rs  mod.rs  report.rs  run.rs
crates/wash/src/burn/: mod.rs
crates/wash/src/hooks/: builtin_block.rs  compaction.rs  edit_batching_nudge.rs  mod.rs  post_tool_observe.rs  session_start.rs  session_stop.rs  tool_redirect.rs
crates/wash/src/mcp/: mod.rs  server.rs
crates/wash/src/tools/: build.rs  edit.rs  gh_pr.rs  git_state.rs  mod.rs  read.rs  search.rs  test_run.rs
crates/wash/tests/: mcp_stdio.rs
docs/: bench.md  compaction-attribution.md
hooks/: hooks.json
legacy-ts/scripts/: builtin-block-hook.js  edit-batching-nudge.js  generate-large-fixture.mjs  session-start-hook.js  session-stop-ingest-hook.js
legacy-ts/src/: index.js
legacy-ts/test/: burn-sdk.test.js  read.test.js
scripts/: burn-compare.js  copy-binary.mjs  tool-redirect-hook.js
servers/: relaywash-server.js
src/: measure.js
src/ast/: index.js
test/: build-tool.test.js  edit.test.js  git-state.test.js  read.test.js  search.test.js
(+37 files in other folders)
